<resources>
    <string name="app_name">大模型对话</string>
    <string name="start_new_chat">Start New Chat</string>
    <string name="no_chat_history">No chat history yet.\nTap the + button to start!</string>
    <string name="type_a_message">Type a message…</string>
    <string name="send_message">Send Message</string>
    <string name="conversation_title_prefix">对话开始于</string>
    <string name="chat_history">对话历史</string>
    <string name="chat_with_llm">Chat</string>
    <string name="new_chat_tooltip">Create New Chat</string>
    <string name="delete_conversation_title">删除对话</string>
    <string name="delete_conversation_message">确定要删除此对话及其所有消息吗？</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    
    <!-- 设置页面 -->
    <string name="settings">设置</string>
    <string name="output_settings">输出设置</string>
    <string name="use_streaming_output">使用流式输出</string>
    <string name="streaming_description">开启后，AI响应将逐字显示，提供更好的交互体验</string>
    <string name="settings_saved">设置已保存</string>
    
    <!-- 模型设置 -->
    <string name="model_settings">模型设置</string>
    <string name="select_model">选择AI模型</string>
    <string name="model_description">不同模型具有不同的能力和特点，请根据需要选择</string>

    <!-- 联网搜索设置 -->
    <string name="search_settings">搜索设置</string>
    <string name="enable_network_search">启用联网搜索</string>
    <string name="network_search_description">开启后，AI将能够搜索网络获取最新信息</string>
    
    <!-- 夜间模式 -->
    <string name="toggle_night_mode">切换夜间模式</string>
    <string name="night_mode_on">夜间模式已开启</string>
    <string name="night_mode_off">夜间模式已关闭</string>
</resources>